unpackaged/main/default/objects/litify_pm__Related_List_Prepopulation__mdt/litify_pm__Related_List_Prepopulation__mdt.object-meta.xml
<CustomObject>
    <description>Used by the implementer of the RelatedLists component to drive pre-population of new related list records.</description>
    <label>Related List Prepopulation</label>
    <pluralLabel>Related Lists Prepopulations</pluralLabel>
</CustomObject>