unpackaged/main/default/objects/litify_pm__Related_List_Prepopulation__mdt/fields/litify_pm__Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Parent_Object_API_Name__c</fullName>
    <description>The API name of the object to do the pre-populating from.</description>
    <inlineHelpText>The API name of the object to do the pre-populating from.</inlineHelpText>
    <label>Parent Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>