unpackaged/main/default/objects/litify_pm__Related_List_Prepopulation__mdt/fields/litify_pm__Parent_Object_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Parent_Object_Field_API_Name__c</fullName>
    <description>The field API name on the parent object that you want to use the value for during pre-population.</description>
    <inlineHelpText>The field API name on the parent object that you want to use the value for during pre-population.</inlineHelpText>
    <label>Parent Object Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>