unpackaged/main/default/objects/litify_pm__Related_List_Prepopulation__mdt/fields/litify_pm__Related_List_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Related_List_Field_API_Name__c</fullName>
    <description>The API name of the related list field that you want pre-populated.</description>
    <inlineHelpText>The API name of the related list field that you want pre-populated.</inlineHelpText>
    <label>Related List Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>