unpackaged/main/default/objects/litify_pm__Related_List_Prepopulation__mdt/fields/litify_pm__Related_List_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Related_List_Object_API_Name__c</fullName>
    <description>The API name of the related list to do the pre-populating for.</description>
    <inlineHelpText>The API name of the related list to do the pre-populating for.</inlineHelpText>
    <label>Related List Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>